Causeview Package Complete/src/objects/Installment__c.object
<CustomObject>
    <description>Causeview - represents a payment installment related to pledges and grants.</description>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <formula>IF(ISBLANK( Pledge__r.Organization__c ), HYPERLINK(&quot;/&quot; &amp; Pledge__r.Constituent__c, Pledge__r.Constituent__r.FirstName &amp; &quot; &quot; &amp; Pledge__r.Constituent__r.LastName,&quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Pledge__r.Organization__c, Pledge__r.Organization__r.Name,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account/Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Fulfilled_To_Date__c</fullName>
        <description>Total of all payments received to date.</description>
        <inlineHelpText>Total of all payments received to date.</inlineHelpText>
        <label>Amount Fulfilled To Date</label>
        <summarizedField>Installment_Fulfillment__c.Fulfillment_Amount__c</summarizedField>
        <summaryForeignKey>Installment_Fulfillment__c.Installment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inst_No__c</fullName>
        <description>Installment number</description>
        <label>Inst No.</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <description>Installment or pledged amount.</description>
        <label>Installment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Balance__c</fullName>
        <description>Remaining balance of the installment</description>
        <formula>IF(Installment_Amount__c -  Amount_Fulfilled_To_Date__c &gt; 0, Installment_Amount__c -  Amount_Fulfilled_To_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Date__c</fullName>
        <description>Date of expected payment</description>
        <label>Installment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pledge__c</fullName>
        <description>Associated pledge (Transaction) .</description>
        <label>Pledge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Gift__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Gift</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Pledge Installment.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Installment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>